--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>study</title>
+        <title>study2</title>
         <style>
             td,th,
             table{border:1px solid red;  width:100%}
