--- a/table/table1.html
+++ b/table/table1.html
@@ -10,7 +10,7 @@
         </style>
     </head>
     <body>
-        <table>
+        <table border="1">
         <caption>
             <strong>보험료예시</strong>
             <p>나이, 구분, 성별, 기본플랜, 표준플랜, 고급플랜 정보입니다.</p>
