--- a/practice1_jo.html
+++ b/practice1_jo.html
@@ -8,7 +8,7 @@
 
 <body>
     <table border="2">
-        <caption>table practice</caption>
+        <caption>table practice는 jo team과 yun team의 요일별로 first day, second day에 이루어진 각각 3경기의 결과와 total, End result 정보표 입니다.</caption>
         <col />
         <colgroup>
             <col span="3" />
