--- a/table-test2.html
+++ b/table-test2.html
@@ -9,12 +9,19 @@
 <body>
     <table border="1" style="width:100%; table-layout: fixed">
         <caption>table test2</caption>
+        <col />
+        <colgroup>
+            <col span="2" />
+        </colgroup>
+        <colgroup>
+            <col span="3" />
+        </colgroup>
 
         <thead>
             <tr>
                 <th scope="row" rowspan="2">c</th>
-                <th scope="col" colspan="2">a</th>
-                <th scope="col" colspan="3">b</th>
+                <th scope="colgroup" colspan="2">a</th>
+                <th scope="colgroup" colspan="3">b</th>
             </tr>
             <tr>
                 <th scope="col">a-a</th>
