--- a/practice2.html
+++ b/practice2.html
@@ -28,19 +28,17 @@
         </thead>
 
         <tbody>
+
             <tr>
-                <td rowspan="7">30세</td>
-            </tr>
-            
-            <tr>
-                <td rowspan="2">보장보험료</td>
+                <td rowspan="6">30세</td>
+                <td>보장보험료</td>
                 <td>남</td>
                 <td>2,941원</td>
                 <td>7,383원</td>
                 <td>8,375원</td>
             </tr>
-
             <tr>
+                <td >보장보험료</td>
                 <td>여</td>
                 <td>2,851원</td>
                 <td>5,370원</td>
@@ -48,14 +46,14 @@
             </tr>
 
             <tr>
-                <td rowspan="2">적립보험료</td>
+                <td >적립보험료</td>
                 <td>남</td>
                 <td>6,959원</td>
                 <td>5,517원</td>
                 <td>8,525원</td>
             </tr>
-
             <tr>
+                <td >적립보험료</td>
                 <td>여</td>
                 <td>7,049원</td>
                 <td>7,530원</td>
@@ -63,14 +61,14 @@
             </tr>
 
             <tr>
-                <td rowspan="2">납입보험료</td>
+                <td >납입보험료</td>
                 <td>남</td>
                 <td>9,900원</td>
                 <td>12,900원</td>
                 <td>16,900원</td>
             </tr>
-
             <tr>
+                <td >납입보험료</td>
                 <td>여</td>
                 <td>9,900원</td>
                 <td>12,900원</td>
