--- a/list.html
+++ b/list.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <title>list</title>
-        <meta chraset="utf-8">
+        <meta charset="utf-8">
     </head>
     
     <body>
