--- a/table-test1.html
+++ b/table-test1.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>test</title>
-    <meta chraset="utf-8" />
+    <meta charset="utf-8" />
     <style>
         td,
         th,
