--- a/table/practice3-1.html
+++ b/table/practice3-1.html
@@ -14,7 +14,7 @@
         <colgroup>
             <col span="2" />
         </colgroup>
-        <co1 />
+        <col />
         <col />
         <thead>
             <tr>
