--- a/table/practice4.html
+++ b/table/practice4.html
@@ -18,18 +18,18 @@
         <col />
         <thead>
             <tr>
-                <th scope="col">구분</th>
-                <th scope="col">가입금액</th>
-                <th scope="col">보통 약관</th>
-                <th scope="col">체증형(2배)</th>
-                <th scope="col">체증형(3배)</th>
+                <th id="tbl_1">구분</th>
+                <th id="tbl_2">보통 약관</th>
+                <th id="tbl_3">체증형(2배)</th>
+                <th id="tbl_4">가입금액</th>
+                <th id="tbl_5">체증형(3배)</th>
         </thead>
         <tbody>
             </tr>
             <tr>
-                <th scope="row">암진단</th>
+                <th id="tblr">암진단</th>
                 <td rowspan="3">3,000만</td>
-                <td>20,430</td>
+                <td headers="tbl_r1 tbl_3">20,430</td>
                 <td>17,475</td>
                 <td>16,340</td>
             </tr>
