--- a/form/f_practice1-1.html
+++ b/form/f_practice1-1.html
@@ -27,7 +27,7 @@
                 <input type="checkbox" id="ck1" checked />
                 <label for="ck1">떡볶이</label>
 
-                <input type="checkbox" id="ck2" />
+                <input type="checkbox" id="ck2" checked disabled />
                 <label for="ck2">치킨</label>
 
                 <input type="checkbox" id="ck3" />
