--- a/form/form_input.html
+++ b/form/form_input.html
@@ -23,10 +23,10 @@
             <input type="text" value="" id="aaa3" title="전화번호 앞자리" placeholder="하이픈없이 입력하세요" />
             <input type="text" value="dddd" id="aaa3" title="전화번호 앞자리" readonly />
             <br />
-            <input type="checkbox" id="b1" checked />
+            <input type="checkbox" id="b1" checked disabled />
             <label for="b1">떡볶이</label>
 
-            <input type="checkbox" id="b2" />
+            <input type="checkbox" id="b2" checked/>
             <label for="b2">오뎅</label>
 
             <input type="checkbox" id="b3" disabled />
