--- a/form/form_homework/190527/not1.html
+++ b/form/form_homework/190527/not1.html
@@ -22,9 +22,9 @@
             <tr>
                 <th scope="col" rowspan="2">기간</th>
                 <th scope="col" rowspan="2">납입보험료(원)</th>
-                <th scope="col" colspan="2">최저보증이율 기준</th>
-                <th scope="col" colspan="2">Min(평균공시이율,현재공시이율) 기준</th>
-                <th scope="col" colspan="2">현재 공시이율2.90% 기준</th>
+                <th scope="colgroup" colspan="2">최저보증이율 기준</th>
+                <th scope="colgroup" colspan="2">Min(평균공시이율,현재공시이율) 기준</th>
+                <th scope="colgroup" colspan="2">현재 공시이율2.90% 기준</th>
             </tr>
 
             <tr>
