--- a/form/form_homework/190527/not3.html
+++ b/form/form_homework/190527/not3.html
@@ -9,7 +9,9 @@
 <body>
     <table border="2">
         <caption>납입보험료에 대한 해지환급금을 나타낸 표</caption>
-        <col />
+        <colgroup>
+            <col />
+        </colgroup> 
         <colgroup>
             <col span="7">
         </colgroup>
